<resources>
    <string name="app_name">Mobile PPK Apps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_binaan">Binaan</string>
    <string name="menu_mahasiswa">Mahasiswa</string>
    <string name="menu_pendamping">Mahasiswa Pendamping</string>
    <string name="menu_dosen">Dosen Supervisor</string>
    <string name="logout">Logout</string>
</resources>